--- a/GoodsCommunity/src/main/resources/config.properties
+++ b/GoodsCommunity/src/main/resources/config.properties
@@ -27,3 +27,4 @@ spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.cache=false
 spring.web.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/
 
+mybatis.mapper-locations=classpath:/mappers/**/*.xml
