로그인/로그아웃/아이디 저장

--- a/GoodsCommunity/src/main/resources/application.properties
+++ b/GoodsCommunity/src/main/resources/application.properties
@@ -3,14 +3,13 @@ spring.application.name=GoodsCommunity
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# devTools 관련 설정 개발 환경에서 코드 변경이 있을 경우 자동으로 재시작 처리한다.
+# devTools \uAD00\uB828 \uC124\uC815 \uAC1C\uBC1C \uD658\uACBD\uC5D0\uC11C \uCF54\uB4DC \uBCC0\uACBD\uC774 \uC788\uC744 \uACBD\uC6B0 \uC790\uB3D9\uC73C\uB85C \uC7AC\uC2DC\uC791 \uCC98\uB9AC\uD55C\uB2E4.
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
-# 로깅 레벨 설정
+# \uB85C\uAE45 \uB808\uBCA8 \uC124\uC815
 # trace < debug < info < warn < error < fatal
 logging.leverl.edu.thejoeun.goodscommunity=debug
 
-# 사용자의 상태를 서버에 설정한다.
+# \uC0AC\uC6A9\uC790\uC758 \uC0C1\uD0DC\uB97C \uC11C\uBC84\uC5D0 \uC124\uC815\uD55C\uB2E4.
 server.servlet.session.tracking-modes=cookie
-
