--- a/GoodsCommunity/src/main/resources/config.properties
+++ b/GoodsCommunity/src/main/resources/config.properties
@@ -1,30 +1,30 @@
-# 나중에는 모두가 사용할 수 있는 서버용 mysql로 url 수정할 것이다.
+# \uB098\uC911\uC5D0\uB294 \uBAA8\uB450\uAC00 \uC0AC\uC6A9\uD560 \uC218 \uC788\uB294 \uC11C\uBC84\uC6A9 mysql\uB85C url \uC218\uC815\uD560 \uAC83\uC774\uB2E4.
 spring.datasource.url=jdbc:mysql://localhost:3306/tje
 spring.datasource.username=user1
 spring.datasource.password=tjee1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 원래는 hikari 사용할 필요 없었지만 DB   빛처럼 빠른 툴이 개발되었다.
-# DB에 연결 가능한 시간을 기본 값에서 개발자가 원하는 세팅 값으로 변경한다.
+# \uC6D0\uB798\uB294 hikari \uC0AC\uC6A9\uD560 \uD544\uC694 \uC5C6\uC5C8\uC9C0\uB9CC DB   \uBE5B\uCC98\uB7FC \uBE60\uB978 \uD234\uC774 \uAC1C\uBC1C\uB418\uC5C8\uB2E4.
+# DB\uC5D0 \uC5F0\uACB0 \uAC00\uB2A5\uD55C \uC2DC\uAC04\uC744 \uAE30\uBCF8 \uAC12\uC5D0\uC11C \uAC1C\uBC1C\uC790\uAC00 \uC6D0\uD558\uB294 \uC138\uD305 \uAC12\uC73C\uB85C \uBCC0\uACBD\uD55C\uB2E4.
 spring.datasource.hikari.connection-timeout=30000
-# 연결 가능한 최대 연결 수를 기본 값에서 개발자가 원하는 세팅 값으로 변경한다.
+# \uC5F0\uACB0 \uAC00\uB2A5\uD55C \uCD5C\uB300 \uC5F0\uACB0 \uC218\uB97C \uAE30\uBCF8 \uAC12\uC5D0\uC11C \uAC1C\uBC1C\uC790\uAC00 \uC6D0\uD558\uB294 \uC138\uD305 \uAC12\uC73C\uB85C \uBCC0\uACBD\uD55C\uB2E4.
 spring.datasource.hikari.maximum-pool-size=5
-# 연결이 풀에서 유효 상태로 있을 수 있는 최대 시간 설정을 기본 값에서 개발자가 원하는 세팅 값으로 변경한다.
+# \uC5F0\uACB0\uC774 \uD480\uC5D0\uC11C \uC720\uD6A8 \uC0C1\uD0DC\uB85C \uC788\uC744 \uC218 \uC788\uB294 \uCD5C\uB300 \uC2DC\uAC04 \uC124\uC815\uC744 \uAE30\uBCF8 \uAC12\uC5D0\uC11C \uAC1C\uBC1C\uC790\uAC00 \uC6D0\uD558\uB294 \uC138\uD305 \uAC12\uC73C\uB85C \uBCC0\uACBD\uD55C\uB2E4.
 spring.datasource.hikari.idle-timeout=60000
-# 연결 풀의 이름을 설정한다.
+# \uC5F0\uACB0 \uD480\uC758 \uC774\uB984\uC744 \uC124\uC815\uD55C\uB2E4.
 spring.datasource.hikari.pool-name=MyHikariCP
-# 자동 커밋 종료를 개발자가 원하는 형태로 커밋 세팅한다.
+# \uC790\uB3D9 \uCEE4\uBC0B \uC885\uB8CC\uB97C \uAC1C\uBC1C\uC790\uAC00 \uC6D0\uD558\uB294 \uD615\uD0DC\uB85C \uCEE4\uBC0B \uC138\uD305\uD55C\uB2E4.
 spring.datasource.hikari.auto-commit=false
 
 spring.jpa.hibernate.ddl-auto=update
 
-# default 값이라 작성하지 않아도 무관하다.
+# default \uAC12\uC774\uB77C \uC791\uC131\uD558\uC9C0 \uC54A\uC544\uB3C4 \uBB34\uAD00\uD558\uB2E4.
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.cache=false
-spring.web.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/
+spring.web.resources.static-locations=classpath:/static/
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
