--- a/GoodsCommunity/build.gradle
+++ b/GoodsCommunity/build.gradle
@@ -44,7 +44,11 @@ dependencies {
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
