--- a/GoodsCommunity/src/main/resources/config.properties
+++ b/GoodsCommunity/src/main/resources/config.properties
@@ -28,3 +28,10 @@ spring.thymeleaf.cache=false
 spring.web.resources.static-locations=classpath:/static/
 
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
+
+log.config.path=./logs/
+log.config.fileName=application
+
+# \uC774\uBA54\uC77C \uC778\uC99D\uC6A9 username, password
+spring.mail.username=marquezaries607@gmail.com
+spring.mail.password=jngb hzxv rmju qslp
