--- a/GoodsCommunity/src/main/resources/application.properties
+++ b/GoodsCommunity/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.devtools.livereload.enabled=true
 
 # \uB85C\uAE45 \uB808\uBCA8 \uC124\uC815
 # trace < debug < info < warn < error < fatal
-logging.leverl.edu.thejoeun.goodscommunity=debug
+logging.level.edu.thejoeun.goodscommunity=debug
 
 # \uC0AC\uC6A9\uC790\uC758 \uC0C1\uD0DC\uB97C \uC11C\uBC84\uC5D0 \uC124\uC815\uD55C\uB2E4.
 server.servlet.session.tracking-modes=cookie
